@@ -10,7 +10,17 @@
 
 LIBCXXW_NAMESPACE_START
 
-bookpagefactoryObj::bookpagefactoryObj()=default;
+bookpagefactoryObj::bookpagefactoryObj()
+	: noncurrent_color{"book_tab_inactive_color"},
+	  current_color{"book_tab_active_color"},
+	  warm_color{"book_tab_warm_color"},
+	  active_color{"book_tab_hot_color"},
+	  label_font{theme_font{"book_tab_font"}},
+	  label_foreground_color{"book_tab_font_color"},
+	  horiz_padding{"book_tab_h_padding"},
+	  vert_padding{"book_tab_v_padding"}
+{
+}
 
 
 bookpagefactoryObj::~bookpagefactoryObj()=default;
