@@ -5,9 +5,10 @@
 #ifndef x_w_pagetabgridcontainer_impl_h
 #define x_w_pagetabgridcontainer_impl_h
 
+#include "x/w/impl/always_visible.H"
+#include "x/w/impl/container_element.H"
+#include "x/w/impl/child_element.H"
 #include "booklayoutmanager/pagetabgridcontainer_implfwd.H"
-#include "booklayoutmanager/pagetabgridcontainer_implobj.H"
-#include <x/ref.H>
 
 LIBCXXW_NAMESPACE_START
 
