@@ -25,29 +25,25 @@ pagetabsingletonlayoutmanager_implObj::~pagetabsingletonlayoutmanager_implObj()
 
 dim_t pagetabsingletonlayoutmanager_implObj::get_left_padding(ONLY IN_THREAD)
 {
-	return pagetab_container->my_pagetabgridcontainer_impl
-		->themedim_element<tab_h_padding_tag>
+	return pagetab_container->themedim_element<h_padding_tag>
 		::pixels(IN_THREAD);
 }
 
 dim_t pagetabsingletonlayoutmanager_implObj::get_right_padding(ONLY IN_THREAD)
 {
-	return pagetab_container->my_pagetabgridcontainer_impl
-		->themedim_element<tab_h_padding_tag>
+	return pagetab_container->themedim_element<h_padding_tag>
 		::pixels(IN_THREAD);
 }
 
 dim_t pagetabsingletonlayoutmanager_implObj::get_top_padding(ONLY IN_THREAD)
 {
-	return pagetab_container->my_pagetabgridcontainer_impl
-		->themedim_element<tab_v_padding_tag>
+	return pagetab_container->themedim_element<v_padding_tag>
 		::pixels(IN_THREAD);
 }
 
 dim_t pagetabsingletonlayoutmanager_implObj::get_bottom_padding(ONLY IN_THREAD)
 {
-	return pagetab_container->my_pagetabgridcontainer_impl
-		->themedim_element<tab_v_padding_tag>
+	return pagetab_container->themedim_element<v_padding_tag>
 		::pixels(IN_THREAD);
 }
 
